--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 services:
 
   s3_api_metrics:
-    image:  private.reg.arvanstorage.ir/s3_api_metrics
-    build: ./s3_api_metrics
+    image: s3_api_metrics
+    build: ./s3_api
     ports:
       - 8000:8000
     environment:
@@ -20,4 +20,5 @@ services:
       - 8080:8080
     environment:
       - SOURCE=<source of origin>
+      - BACKEND_HOSTNAME=<>
 
